[gd_scene load_steps=8 format=3 uid="uid://bggxtdevj1r6v"]

[ext_resource type="Script" path="res://menu/projects/projects_list.gd" id="1_wdfsu"]
[ext_resource type="Script" path="res://menu/projects/project_panel.gd" id="2_qt3du"]
[ext_resource type="Texture2D" uid="uid://bhhq4f6xu4ldc" path="res://menu/projects/thumbnail_loading.png" id="3_4jn04"]
[ext_resource type="Script" path="res://menu/projects/export_button.gd" id="3_ijuv3"]
[ext_resource type="Script" path="res://menu/projects/export_handler.gd" id="5_qthqx"]

[sub_resource type="LabelSettings" id="LabelSettings_conew"]
font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qu2ph"]
bg_color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="ProjectsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProjectsList" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.212674
anchor_bottom = 1.0
script = ExtResource("1_wdfsu")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ProjectsList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="ProjectPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.376022
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_qt3du")

[node name="ProjectName" type="Label" parent="ProjectPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.998
anchor_bottom = 0.201
offset_left = 33.0
offset_top = 3.0
offset_right = -0.186035
offset_bottom = -0.248001
text = "Name"
label_settings = SubResource("LabelSettings_conew")
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 4

[node name="Buttons" type="HBoxContainer" parent="ProjectPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.769
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 38.0
offset_top = -0.312042
offset_right = 0.5
offset_bottom = -64.0

[node name="ImportButton" type="Button" parent="ProjectPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Import"

[node name="ExportButton" type="Button" parent="ProjectPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Export"
script = ExtResource("3_ijuv3")

[node name="Thumbnail" type="TextureRect" parent="ProjectPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.637
anchor_top = 0.644
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.240967
offset_top = -0.312042
offset_right = -35.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4jn04")
expand_mode = 1
stretch_mode = 5

[node name="ExportHandler" type="Control" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_qthqx")

[node name="ExportDialog" type="FileDialog" parent="ExportHandler"]
title = "Select the project export location"
access = 2
filters = PackedStringArray("*.p3d;Paint 3D Project File")
use_native_dialog = true

[node name="ExportProgressPanel" type="Panel" parent="ExportHandler"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 133.0
offset_top = 59.0
offset_right = -133.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qu2ph")

[connection signal="pressed" from="ProjectPanel/Buttons/ExportButton" to="ProjectPanel/Buttons/ExportButton" method="_on_pressed"]
[connection signal="canceled" from="ExportHandler/ExportDialog" to="ExportHandler" method="_on_export_dialog_canceled"]
[connection signal="file_selected" from="ExportHandler/ExportDialog" to="ExportHandler" method="_on_export_dialog_file_selected"]
